--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,11 @@ matrix:
     allow_failures:
         - python: "nightly"
 
+ cache:
+    directories:
+     - $HOME/.cache/pip
+     - .hypothesis
+
 before_install:
   - if [[ $MINICONDA_OS ]]; then
       URL="https://repo.continuum.io/miniconda/Miniconda3-latest-${MINICONDA_OS}-x86_64.sh";
