--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 matrix:
+    fast_finish: yes
     include:
+        # CPython builds
         - os: linux
           python: 3.6
         - os: linux
@@ -8,8 +10,15 @@ matrix:
           env: PYTHON="3.7"
         - os: linux
           python: nightly
+
+        # PyPy builds
+        - os: linux
+          language: generic
+          env: PYTHON="pypy-py3.6"
+
     allow_failures:
         - python: "nightly"
+        - env: PYTHON="pypy-py3.6"
 
 cache:
     directories:
