--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ install:
   - pip install -e .;
   - # Do not install mypy during pypy builds
     '[[ ! "$PYTHON" =~ pypy-* ]] || sed -i "/^mypy/d" dev-requirements.txt'
-  - pip install -r dev-requirements.txt;
+  - pip install -U -r dev-requirements.txt;
 
 script:
   - pytest --hypothesis-profile ci
