--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,7 @@ install:
   - # Do not install mypy during pypy builds
     '[[ ! "$PYTHON" =~ pypy-* ]] || sed -i "/^mypy/d" dev-requirements.txt'
   - pip install -U -r dev-requirements.txt;
+  - pip list
 
 script:
   - pytest --hypothesis-profile ci
