--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,7 @@
 [flake8]
-select = C,E,F,W,B,B9
+select = C,E,F,I,W,B,B9
 ignore = E704
 max-line-length = 100
+
+application-import-names = ppb_vector,utils
+import-order-style = smarkets
