--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -43,13 +43,15 @@ Linux_task:
       - image: python:3.6-slim
       - image: python:3.7-slim
       - image: python:3.8-rc-slim
+      - image: pypy:3.6-slim
 
   install_script:
     - pip install --upgrade-strategy eager -U -r dev-requirements.txt
     - pip install -e .
 
   script:
-    - python3 --version
+    - command -v pypy3 >/dev/null && export PY=pypy3
+    - ${PY-python3} --version
     - pip list
     - ./test.sh
 
