--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -3,6 +3,7 @@ docs_task:
     image: python:3.7-slim
 
   install_script:
+    - apt install make
     - pip install --upgrade-strategy eager -U -r docs-requirements.txt
     - pip install -e .
 
