--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -14,10 +14,12 @@ lint_task:
 
 
 Linux_task:
+  allow_failures: $CIRRUS_TASK_NAME =~ '.*-rc-.*'
   container:
     matrix:
       - image: python:3.6-slim
       - image: python:3.7-slim
+      - image: python:3.8-rc-slim
 
   install_script:
     - pip install --upgrade-strategy eager -U -r dev-requirements.txt
@@ -54,11 +56,13 @@ macOS_task:
     - ./test.sh
 
 Windows_task:
+  allow_failures: $CIRRUS_TASK_NAME =~ '.*-rc-.*'
   windows_container:
     os_version: 2019
     matrix:
       - image: python:3.6-windowsservercore-1809
       - image: python:3.7-windowsservercore-1809
+      - image: python:3.8-rc-windowsservercore-1809
 
   install_script:
     - C:\Python\python.exe -m pip install --upgrade-strategy eager -U -r dev-requirements.txt
