setup.py: Integrate with pytest

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,11 @@ packages = ppb_vector
 python_requires = >= 3.6
 zip_safe = True
 
+setup_requires = pytest-runner
+
+[aliases]
+test = pytest
+
 
 [flake8]
 select = C,E,F,I,W,B,B9
