Document and test the use of __slots__ for subclasses

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,5 +33,5 @@ select = C,E,F,I,W,B,B9
 ignore = E704
 max-line-length = 100
 
-application-import-names = ppb_vector,utils
+application-import-names = ppb_vector,test_subclass,utils
 import-order-style = smarkets
