--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = ppb-vector
-version = 0.4.0rc1
+version = 1.0a1
 author = Piper Thunstrom
 author_email = pathunstrom@gmail.com
 description = A basic game development Vector2 class.
