Rename Vector2 to Vector, add compatibility alias in __init__.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = ppb-vector
 version = 1.0a1
 author = Piper Thunstrom
 author_email = pathunstrom@gmail.com
-description = A basic game development Vector2 class.
+description = A basic game development Vector class.
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/ppb/ppb-vector
