--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -51,17 +51,18 @@ FreeBSD_task:
     - ${PY} -m pip list
     - ./test.sh
 
-Linux_task:
+task:
   skip: $CIRRUS_BRANCH =~ '.*\.tmp'
   env:
     matrix:
-      - IMAGE: python:3.6-slim
-      - IMAGE: python:3.7-slim
-      - IMAGE: python:3.8-rc-slim
-      - IMAGE: pypy:3.6-slim
-  allow_failures: $IMAGE =~ '.*-rc-.*'
+      - IMAGE_TAG: 3.6-slim
+      - IMAGE_TAG: 3.7-slim
+      - IMAGE_TAG: 3.8-rc-slim
+      - IMAGE_TAG: 3.6-slim
+  name: "Linux $IMAGE_TAG"
+  allow_failures: $IMAGE_TAG =~ '.*-rc-.*'
   container:
-    image: $IMAGE
+    image: python:$IMAGE_TAG
 
   install_script:
     - pip install --upgrade-strategy eager -U -r requirements-tests.txt
@@ -99,17 +100,18 @@ macOS_task:
     - pip list
     - ./test.sh
 
-Windows_task:
+task:
   skip: $CIRRUS_BRANCH =~ '.*\.tmp'
   env:
     matrix:
-      - IMAGE: python:3.6-windowsservercore-1809
-      - IMAGE: python:3.7-windowsservercore-1809
-      - IMAGE: python:3.8-rc-windowsservercore-1809
+      - IMAGE_TAG: 3.6-windowsservercore-1809
+      - IMAGE_TAG: 3.7-windowsservercore-1809
+      - IMAGE_TAG: 3.8-rc-windowsservercore-1809
   allow_failures: $IMAGE =~ '.*-rc-.*'
+  name: "Windows $IMAGE_TAG"
   windows_container:
     os_version: 2019
-    image: $IMAGE
+    image: python:$IMAGE_TAG
 
   install_script:
     - C:\Python\python.exe -m pip install --upgrade-strategy eager -U -r requirements-tests.txt
