--- a/bors.toml
+++ b/bors.toml
@@ -3,10 +3,10 @@ status = [
   "FreeBSD PYTHON:3.6",
   "FreeBSD PYTHON:3.7",
   "lint",
-  "Linux 3.6-slim",
-  "Linux 3.7-slim",
-  "Windows 3.6-windowsservercore-1809",
-  "Windows 3.7-windowsservercore-1809",
+  "Linux python:3.6-slim",
+  "Linux python:3.7-slim",
+  "Windows python:3.6-windowsservercore-1809",
+  "Windows python:3.7-windowsservercore-1809",
   "macOS PYTHON:3.6.8",
   "macOS PYTHON:3.7.2",
 ]
