--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = ppb-vector
-version = 1.0b1
+version = attr: ppb_vector.__version__
 author = Piper Thunstrom
 author_email = pathunstrom@gmail.com
 description = A basic game development Vector class.
