--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -90,7 +90,7 @@ task:
     matrix:
       - IMAGE: python:3.6-slim
       - IMAGE: python:3.7-slim
-      - IMAGE: python:3.8-rc-slim
+      - IMAGE: python:3.8-slim
       - IMAGE: pypy:3.6-slim
   name: "Linux $IMAGE"
   allow_failures: $IMAGE =~ '.*-rc-.*'
@@ -139,7 +139,7 @@ task:
     matrix:
       - IMAGE: python:3.6-windowsservercore-1809
       - IMAGE: python:3.7-windowsservercore-1809
-      - IMAGE: python:3.8-rc-windowsservercore-1809
+      - IMAGE: python:3.8-windowsservercore-1809
   allow_failures: $IMAGE =~ '.*-rc-.*'
   name: "Windows $IMAGE"
   windows_container:
