--- a/bors.toml
+++ b/bors.toml
@@ -5,8 +5,10 @@ status = [
   "lint",
   "Linux python:3.6-slim",
   "Linux python:3.7-slim",
+  "Linux python:3.8-slim",
   "Windows python:3.6-windowsservercore-1809",
   "Windows python:3.7-windowsservercore-1809",
+  "Windows python:3.8-windowsservercore-1809",
   "macOS PYTHON:3.6.9",
   "macOS PYTHON:3.7.5",
   "macOS PYTHON:3.8.0",
