CI: Add CPython 3.8.0 environment on macOS

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -116,6 +116,7 @@ macOS_task:
     matrix:
       - PYTHON: 3.6.9
       - PYTHON: 3.7.5
+      - PYTHON: 3.8.0
   install_script:
     # Per the pyenv homebrew recommendations.
     # https://github.com/pyenv/pyenv/wiki#suggested-build-environment
