--- a/bors.toml
+++ b/bors.toml
@@ -9,6 +9,7 @@ status = [
   "Windows python:3.7-windowsservercore-1809",
   "macOS PYTHON:3.6.9",
   "macOS PYTHON:3.7.5",
+  "macOS PYTHON:3.8.0",
   "pep517",
 ]
 
