--- a/bors.toml
+++ b/bors.toml
@@ -2,6 +2,7 @@ status = [
   "docs",
   "FreeBSD PYTHON:3.6",
   "FreeBSD PYTHON:3.7",
+  "FreeBSD PYTHON:3.8",
   "lint",
   "Linux python:3.6-slim",
   "Linux python:3.7-slim",
