--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -64,7 +64,7 @@ upload_task:
 FreeBSD_task:
   skip: $CIRRUS_BRANCH =~ '.*\.tmp'
   freebsd_instance:
-    image: freebsd-12-0-release-amd64
+    image_family: freebsd-12-1
   env:
     matrix:
       - PYTHON: 3.6
