--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -92,6 +92,7 @@ task:
       - IMAGE: python:3.6-slim
       - IMAGE: python:3.7-slim
       - IMAGE: python:3.8-slim
+      - IMAGE: python:3.9-rc-buster
       - IMAGE: pypy:3.6-slim
   name: "Linux $IMAGE"
   allow_failures: $IMAGE =~ '.*-rc-.*'
