--- a/bors.toml
+++ b/bors.toml
@@ -7,9 +7,11 @@ status = [
   "Linux python:3.6-slim",
   "Linux python:3.7-slim",
   "Linux python:3.8-slim",
+  "Linux python:3.9-slim",
   "Windows python:3.6-windowsservercore",
   "Windows python:3.7-windowsservercore",
   "Windows python:3.8-windowsservercore",
+  "Windows python:3.9-windowsservercore",
   "macOS PYTHON:3.6.9",
   "macOS PYTHON:3.7.5",
   "macOS PYTHON:3.8.0",
