--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -95,6 +95,7 @@ task:
       - IMAGE: python:3.9-slim
       - IMAGE: python:3.10-rc-slim
       - IMAGE: pypy:3.6-slim
+      - IMAGE: pypy:3.7-slim
   name: "Linux $IMAGE"
   allow_failures: $IMAGE =~ '.*-rc-.*'
   container:
