--- a/bors.toml
+++ b/bors.toml
@@ -3,6 +3,7 @@ status = [
   "FreeBSD PYTHON:3.6",
   "FreeBSD PYTHON:3.7",
   "FreeBSD PYTHON:3.8",
+  "FreeBSD PYTHON:3.9",
   "lint",
   "Linux python:3.6-slim",
   "Linux python:3.7-slim",
