--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -131,7 +131,7 @@ macOS_task:
   install_script:
     # Per the pyenv homebrew recommendations.
     # https://github.com/pyenv/pyenv/wiki#suggested-build-environment
-    - brew install openssl readline pyenv
+    - brew install openssl readline sqlite3 xz zlib pyenv
     - pyenv install ${PYTHON}
     - pyenv global ${PYTHON}
     - pyenv rehash
@@ -153,7 +153,7 @@ macOS_version_task:
   install_script:
     # Per the pyenv homebrew recommendations.
     # https://github.com/pyenv/pyenv/wiki#suggested-build-environment
-    - brew install openssl readline pyenv
+    - brew install pyenv
 
   script:
     - pyenv install --list
