--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -117,7 +117,7 @@ task:
 macOS_task:
   skip: $CIRRUS_BRANCH =~ '.*\.tmp'
   osx_instance:
-    image: big-sur-xcode
+    image: catalina-xcode
   env:
     PATH: ${HOME}/.pyenv/shims:${PATH}
     matrix:
@@ -127,11 +127,10 @@ macOS_task:
       - PYTHON: 3.7.9
       - PYTHON: 3.8.6
       - PYTHON: 3.9.0
-      - PYTHON: 3.10-dev
   install_script:
     # Per the pyenv homebrew recommendations.
     # https://github.com/pyenv/pyenv/wiki#suggested-build-environment
-    - brew install openssl readline sqlite3 xz zlib pyenv
+    - brew install openssl readline pyenv
     - pyenv install ${PYTHON}
     - pyenv global ${PYTHON}
     - pyenv rehash
@@ -147,13 +146,13 @@ macOS_task:
 macOS_version_task:
   skip: $CIRRUS_BRANCH =~ '.*\.tmp'
   osx_instance:
-    image: big-sur-xcode
+    image: catalina-xcode
   env:
     PATH: ${HOME}/.pyenv/shims:${PATH}
   install_script:
     # Per the pyenv homebrew recommendations.
     # https://github.com/pyenv/pyenv/wiki#suggested-build-environment
-    - brew install pyenv
+    - brew install openssl readline pyenv
 
   script:
     - pyenv install --list
