--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -157,11 +157,11 @@ task:
   skip: $CIRRUS_BRANCH =~ '.*\.tmp'
   env:
     matrix:
-      - IMAGE: python:3.7-windowsservercore
-      - IMAGE: python:3.8-windowsservercore
-      - IMAGE: python:3.9-windowsservercore
-      - IMAGE: python:3.10-windowsservercore
-      - IMAGE: python:rc-windowsservercore
+      - IMAGE: python:3.7
+      - IMAGE: python:3.8
+      - IMAGE: python:3.9
+      - IMAGE: python:3.10
+      - IMAGE: python:rc
   allow_failures: $IMAGE =~ '.*-rc-.*'
   name: "Windows $IMAGE"
   windows_container:
