--- a/bors.toml
+++ b/bors.toml
@@ -7,9 +7,9 @@ status = [
   "Linux python:3.7-slim",
   "Linux python:3.8-slim",
   "Linux python:3.9-slim",
-  "Windows python:3.7-windowsservercore",
-  "Windows python:3.8-windowsservercore",
-  "Windows python:3.9-windowsservercore",
+  "Windows python:3.7",
+  "Windows python:3.8",
+  "Windows python:3.9",
   "macOS PYTHON:3.7.9",
   "macOS PYTHON:3.8.6",
   "macOS PYTHON:3.9.0",
