--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -96,6 +96,7 @@ task:
       - IMAGE: python:3.10-slim
       - IMAGE: python:rc-slim
       - IMAGE: pypy:3.7-slim
+      - IMAGE: pypy:3.8-slim
   name: "Linux $IMAGE"
   allow_failures: $IMAGE =~ '.*-rc-.*'
   container:
