CI: Require tests to pass on CPython 3.10
Apparently, the Bors configuration wasn't updated along the Cirrus.

--- a/bors.toml
+++ b/bors.toml
@@ -3,13 +3,16 @@ status = [
   "FreeBSD PYTHON:3.7",
   "FreeBSD PYTHON:3.8",
   "FreeBSD PYTHON:3.9",
+  "FreeBSD PYTHON:3.10",
   "lint",
   "Linux python:3.7-slim",
   "Linux python:3.8-slim",
   "Linux python:3.9-slim",
+  "Linux python:3.10-slim",
   "Windows python:3.7",
   "Windows python:3.8",
   "Windows python:3.9",
+  "Windows python:3.10",
   "macOS PYTHON:3.7.9",
   "macOS PYTHON:3.8.6",
   "macOS PYTHON:3.9.0",
