CI: Test against the lastest stable CPython
This should “always” be a duplicate with tests for the latest
minor version, but it hedges against outdated CI definitions.

--- a/bors.toml
+++ b/bors.toml
@@ -9,10 +9,12 @@ status = [
   "Linux python:3.8-slim",
   "Linux python:3.9-slim",
   "Linux python:3.10-slim",
+  "Linux python:3-slim",
   "Windows python:3.7",
   "Windows python:3.8",
   "Windows python:3.9",
   "Windows python:3.10",
+  "Windows python:3",
   "macOS PYTHON:3.7.9",
   "macOS PYTHON:3.8.6",
   "macOS PYTHON:3.9.0",
