--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -94,6 +94,7 @@ task:
       - IMAGE: python:3.8-slim
       - IMAGE: python:3.9-slim
       - IMAGE: python:3.10-slim
+      - IMAGE: python:3-slim
       - IMAGE: python:rc-slim
       - IMAGE: pypy:3.7-slim
       - IMAGE: pypy:3.8-slim
@@ -162,6 +163,7 @@ task:
       - IMAGE: python:3.8
       - IMAGE: python:3.9
       - IMAGE: python:3.10
+      - IMAGE: python:3
       - IMAGE: python:rc
   allow_failures: $IMAGE =~ '.*-rc-.*'
   name: "Windows $IMAGE"
