--- a/requirements-lint.txt
+++ b/requirements-lint.txt
@@ -1,3 +1,6 @@
+# Necessary to be able to lint & typecheck the application and tests
+-r requirements-tests.txt
+
 flake8
 flake8-bugbear
 flake8-commas
