--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -77,7 +77,7 @@ FreeBSD_task:
     - PY=python${PYTHON}
     - pkg install -y bash python${PYVER} ${PYPKG}-setuptools
     - ${PY} -m ensurepip
-    - ${PY} -m pip install --upgrade-strategy eager -U -r requirements-tests.txt
+    - ${PY} -m pip install --upgrade-strategy eager -U -r requirements-ci.txt
     - ${PY} -m pip install -e .
 
   script:
@@ -102,7 +102,7 @@ task:
     image: $IMAGE
 
   install_script:
-    - pip install --upgrade-strategy eager -U -r requirements-tests.txt
+    - pip install --upgrade-strategy eager -U -r requirements-ci.txt
     - pip install -e .
 
   script:
@@ -131,7 +131,7 @@ macOS_task:
     - pyenv global ${PYTHON}
     - pyenv rehash
     - pip install --upgrade-strategy eager -U pip wheel setuptools
-    - pip install --upgrade-strategy eager -U -r requirements-tests.txt
+    - pip install --upgrade-strategy eager -U -r requirements-ci.txt
     - pip install .
 
   script:
@@ -169,7 +169,7 @@ task:
     image: $IMAGE
 
   install_script:
-    - C:\Python\python.exe -m pip install --upgrade-strategy eager -U -r requirements-tests.txt
+    - C:\Python\python.exe -m pip install --upgrade-strategy eager -U -r requirements-ci.txt
     - C:\Python\python.exe -m pip install -e .
 
   script:
