tests: Run doctests through pytest
This is a tiny bit faster (our doctests are pretty trivial) but more-importantly
the output is much more cohesive.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,11 @@
 [build-system]
 # Minimum requirements for the build system to execute.
-requires = ["setuptools", "wheel"]  # PEP 508 specifications.
+requires = ["setuptools", "wheel"] # PEP 508 specifications.
 
 # Actually tell PEP517 tools to call setuptools
 build-backend = "setuptools.build_meta"
+
+# PyTest configuration
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "--doctest-modules --doctest-glob=*.md"
