CI/Windows: Fix image names
Apparently, the Windows images do not exist yet under the generic shared tags
for 3.7 and 3.8:  https://github.com/docker-library/python/issues/663

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -160,8 +160,8 @@ task:
   skip: $CIRRUS_BRANCH =~ '.*\.tmp'
   env:
     matrix:
-      - IMAGE: python:3.7
-      - IMAGE: python:3.8
+      - IMAGE: python:3.7-windowsservercore
+      - IMAGE: python:3.8-windowsservercore
       - IMAGE: python:3.9
       - IMAGE: python:3.10
       - IMAGE: python:3
