--- a/bors.toml
+++ b/bors.toml
@@ -10,8 +10,8 @@ status = [
   "Linux python:3.9-slim",
   "Linux python:3.10-slim",
   "Linux python:3-slim",
-  "Windows python:3.7",
-  "Windows python:3.8",
+  "Windows python:3.7-windowsservercore",
+  "Windows python:3.8-windowsservercore",
   "Windows python:3.9",
   "Windows python:3.10",
   "Windows python:3",
