bench: Autosave benchmark data to tests/benchdata
Only happens by default if dulwich is available, as we need to extract
metadata from git.

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 __pycache__/
 .hypothesis/
 /.mypy_cache/
-/tests/*.json
+/tests/benchdata/*.json
 /.eggs/
 
 # Build & artifacts directories for packages & wheels
