CI: Use “greedy containers” for Linux tests, disable CPU limit
This should let us get fast task scheduling while still taking advantage of
Cirrus' idle CPUs on the “community cluster”.

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -89,7 +89,6 @@ FreeBSD_task:
 task:
   skip: $CIRRUS_BRANCH =~ '.*\.tmp'
   env:
-    PYTEST_CPUS: 8
     matrix:
       - IMAGE: python:3.7-slim
       - IMAGE: python:3.8-slim
@@ -103,8 +102,8 @@ task:
   name: "Linux $IMAGE"
   allow_failures: $IMAGE =~ '.*-rc-.*'
   container:
-    cpu: $PYTEST_CPUS
     image: $IMAGE
+    greedy: true
 
   install_script:
     - pip install --upgrade-strategy eager -U -r requirements-ci.txt
