--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -97,8 +97,11 @@ task:
       - IMAGE: python:3-slim
       - IMAGE: python:rc-slim
       - IMAGE: pypy:3.7-slim
+        PYTEST_CPUS: 15
       - IMAGE: pypy:3-slim
+        PYTEST_CPUS: 15
       - IMAGE: pypy:3.8-slim
+        PYTEST_CPUS: 15
   name: "Linux $IMAGE"
   allow_failures: $IMAGE =~ '.*-rc-.*'
   container:
