--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -62,7 +62,7 @@ upload_task:
 
 
 FreeBSD_task:
-  skip: $CIRRUS_BRANCH =~ '.*\.tmp'
+  only_if: $BRANCH == 'staging' || $BRANCH == 'trying'
   freebsd_instance:
     image_family: freebsd-13-0
   env:
@@ -119,7 +119,7 @@ task:
     - ./test.sh
 
 macOS_task:
-  skip: $CIRRUS_BRANCH =~ '.*\.tmp'
+  only_if: $BRANCH == 'staging' || $BRANCH == 'trying'
   osx_instance:
     image: catalina-xcode
   env:
