--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,5 +1,5 @@
 docs_task:
-  skip: $CIRRUS_BRANCH =~ '.*\.tmp'
+  skip: $BRANCH =~ '.*\.tmp'
   container:
     image: python:3-slim
 
@@ -12,7 +12,7 @@ docs_task:
     - make -C docs/ html
 
 lint_task:
-  skip: $CIRRUS_BRANCH =~ '.*\.tmp'
+  skip: $BRANCH =~ '.*\.tmp'
   container:
     image: python:3-slim
 
@@ -26,7 +26,7 @@ lint_task:
     - ./lint.sh
 
 pep517_task:
-  skip: $CIRRUS_BRANCH =~ '.*\.tmp'
+  skip: $BRANCH =~ '.*\.tmp'
   container:
     image: python:3-slim
 
@@ -37,7 +37,7 @@ pep517_task:
     - python3 -m pep517.check .
 
 upload_task:
-  skip: $CIRRUS_BRANCH =~ '.*\.tmp'
+  skip: $BRANCH =~ '.*\.tmp'
   # only_if: $CIRRUS_RELEASE != ""
   env:
     TWINE_REPOSITORY_URL: "https://test.pypi.org/legacy/"
@@ -88,7 +88,7 @@ FreeBSD_task:
     - ./test.sh
 
 task:
-  skip: $CIRRUS_BRANCH =~ '.*\.tmp'
+  skip: $BRANCH =~ '.*\.tmp'
   env:
     matrix:
       - IMAGE: python:3.7-slim
@@ -146,7 +146,7 @@ macOS_task:
     - ./test.sh
 
 task:
-  skip: $CIRRUS_BRANCH =~ '.*\.tmp'
+  skip: $BRANCH =~ '.*\.tmp'
   env:
     matrix:
       - IMAGE: python:3.7-windowsservercore
