--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 # Minimum requirements for the build system to execute.
-requires = ["setuptools", "wheel"] # PEP 508 specifications.
+requires = ["setuptools>=46.4.0", "wheel"] # PEP 508 specifications.
 
 # Actually tell PEP517 tools to call setuptools
 build-backend = "setuptools.build_meta"
