Move dependency options to setup.cfg
We can now get rid of setup.py!  🎉

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,12 @@ classifiers =
 [options]
 packages = ppb_vector
 python_requires = >= 3.7
+
+setup_requires =
+	pytest-runner
+install_requires = file: requirements.txt
+test_requires = file: requirements-tests.txt
+
 zip_safe = True
 
 [aliases]
